fixed image stretching

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -36,7 +36,7 @@ p{
 #navbar {
   overflow: hidden;
   background-color: rgba(21, 27, 84, 0.8);
-  z-index: 9999;
+  z-index: 1;
   padding-top: 15px;
   padding-bottom: 15px;
   padding-right: 30px;
@@ -57,9 +57,6 @@ p{
   width: 1.2rem;
 }
 
-.content {
-  padding: 40px;
-}
 
 .sticky {
   position: fixed;
@@ -195,6 +192,11 @@ section {
 /*--------------------------------------------------------------
 # Our partners
 --------------------------------------------------------------*/
+
+.content {
+  padding: 40px;
+}
+
 .partners{
   background-color: white;
 }
